<resources>
    <string name="app_name">lesson2</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="header">Header</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="day_of_week">Prefered day of the week</string>
    <string name="mon">Monday</string>
    <string name="wed">Wednesday</string>
    <string name="fri">Friday</string>
    <string name="agree">Agree to Terms</string>
    <string name="submit">Submit</string>
</resources>
